apps/commafeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  namespace: commafeed
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
      - name: commafeed
        image: athou/commafeed:4.6.0
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8082
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /commafeed/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: commafeed
