apps/commafeed/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
  namespace: commafeed
spec:
  selector:
    app: commafeed
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed
  namespace: commafeed
spec:
  ingressClassName: internal
  tls:
  - hosts:
    - commafeed.pawked.com
  rules:
  - host: commafeed.pawked.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: commafeed
            port:
              number: 80
